<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="server_adr">http://gerasimov-design.ru/server/server.php</string>
    <string name="app_name">MessengerApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="welcome">WELCOME</string>
    <string name="ico">application icon</string>
    <string name="appname">Gerasimov Messaging App</string>
    <string name="mes">Сообщения</string>
    <string name="con">Контакты</string>
    <string name="set">Настройки</string>
    <string name="about_title">Настройки</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_contact">Contact</string>
    <string name="findnewcont">+Поиск</string>
    <string name="title_activity_conv">Conv</string>
    <string name="editprofiles">Профили</string>
    <string name="editparams">Установки</string>
    <string name="createprofile">+Создать новый профиль</string>
    <string name="title_activity_profiles">ProfilesAct</string>
    <string name="title_activity_new_profile">NewProfile</string>
    <string name="title_activity_create_profile">CreateProfile</string>
    <string name="inputname">Имя ( > 2 знаков )</string>
    <string name="inputlogin">Логин ( > 6 знаков )</string>
    <string name="inputpwd">Пароль ( > 8 знаков )</string>
    <string name="sendtext">Отправить</string>
    <string name="title_activity_new_prof">NewProf</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="profile_edit">Изменить профиль</string>
    <string name="profile_delete">Удалить профиль</string>
    <string name="profile_control">"Управление профилем "</string>
    <string name="loginbuttontext">Авторизоваться</string>
    <string name="loginlogin">Логин</string>
    <string name="loginpassword">Пароль</string>
    <string name="textsettings">НАСТРОЙКИ</string>
    <string name="textprofiles">ПРОФИЛИ</string>
    <string name="textnewprof">СОЗДАТЬ</string>
    <string name="texteditprofile">УПРАВЛЕНИЕ ПРОФИЛЕМ</string>
    <string name="textcontacts">КОНТАКТЫ</string>
    <string name="title_activity_edit_contact">EditContact</string>
    <string name="texteditcontact">УПРАВЛЕНИЕ КОНТАКТОМ</string>
    <string name="deletecontact">Удалить из списка</string>
    <string name="todialog">Диалог</string>
    <string name="new_dialog">Новый диалог</string>
    <string name="text_create_new_dialog">СОЗДАЙТЕ ПЕРВЫЙ ДИАЛОГ</string>
    <string name="text_create_new_dialog1">НАЧНИТЕ НОВЫЙ РАЗГОВОР</string>
    <string name="title_activity_conv_friends">ConvFriends</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sobes">СОБЕСЕДНИК</string>
    <string name="title_activity_the_dialog">TheDialog</string>
    <string name="textview">TextView</string>

</resources>
