<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".NewProf" >

  	 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#0099cc"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ico"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/editprofilecaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/appname"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/textnewprof"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editprofilecaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inputname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputlogin"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText2"
            android:hint=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputpwd"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/profiledelete"
            android:onClick="serverReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendtext" />

    </LinearLayout>

</FrameLayout>
