<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".Settings" >

   
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#0099cc"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ico"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/editprofilecaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/appname"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/textsettings"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <Button
            android:id="@+id/profiledelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="openProfiles"
            android:text="@string/editprofiles" />

        <Button
            android:id="@+id/profileedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/editparams" />

    </FrameLayout>

</FrameLayout>
