<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".Main" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#0099cc"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ico"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/editprofilecaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/appname"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/welcome"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profiledelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openConv"
            android:text="@string/mes" />

        <Button
            android:id="@+id/profileedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openContact"
            android:text="@string/con" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openSettings"
            android:text="@string/set" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="50dp"
        android:background="@color/black_overlay"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:onClick="onUserClick"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </FrameLayout>

</FrameLayout>
