<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ConvFriends" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="top"
            android:background="#0099cc"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ico"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/editprofilecaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/appname"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/sobes"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/cantactslist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="#fff" >
        </ListView>

    </LinearLayout>

      <LinearLayout
          android:id="@+id/fullscreen_content_controls"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="115dp"
          android:orientation="vertical"
          tools:ignore="UselessParent" >
        </LinearLayout>

</FrameLayout>
